fix: modifications on front to adapt to new database format + api doc regenerated
